--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -12,11 +12,11 @@ license: CC0-1.0
 
 ### Simple Summary
 
-This proposal activates select Ethereum protocol upgrades on Ethereum Classic via a hard fork named Olympia. Specifically, it introduces EIP-1559 and EIP-3198 to enhance Ethereum Classic’s EVM compatibility, improve gas pricing, and redirect the basefee to an open, decentralized, and permissionless on-chain treasury for sustainable development funding. The goal is to enhance interoperability with the broader Ethereum ecosystem while preserving Ethereum Classic's Proof-of-Work consensus and core principles.
+This proposal activates select Ethereum protocol upgrades on Ethereum Classic via a hard fork named Olympia. Specifically, it introduces EIP-1559 and EIP-3198 to enhance Ethereum Classic’s EVM compatibility, improve gas pricing, and redirect the `BASEFEE` to a decentralized, permissionless on-chain treasury (defined in ECIP-1112) for sustainable development funding. The goal is to enhance interoperability with the broader Ethereum ecosystem while preserving Ethereum Classic's Proof-of-Work consensus and core principles.
 
 ### Abstract
 
-This ECIP proposes the activation of selected Ethereum protocol upgrades on the Ethereum Classic network under the hard fork name Olympia. The upgrade includes EIP-1559, which introduces a dynamic base fee mechanism to improve transaction fee predictability and market efficiency, and EIP-3198, which adds the BASEFEE opcode for EVM compatibility. These changes are intended to enhance interoperability with Ethereum and other EVM-based networks while preserving Ethereum Classic’s Proof-of-Work consensus and immutability principles.
+This ECIP proposes the activation of selected Ethereum protocol upgrades on the Ethereum Classic network under the hard fork name Olympia. The upgrade includes EIP-1559, which introduces a dynamic base fee mechanism to improve transaction fee predictability and market efficiency, and EIP-3198, which adds the BASEFEE opcode for EVM compatibility. These changes are intended to enhance interoperability with Ethereum and other EVM-based networks while preserving Ethereum Classic’s Proof-of-Work consensus and immutability principles. The Olympia Treasury (see ECIP-1112) receives all `BASEFEE` revenue, which is later governed by Olympia DAO (ECIP-1113) using the Ethereum Classic Funding Proposal process (ECIP-1114).
 
 The proposal excludes upgrades tied to Ethereum’s transition to Proof-of-Stake or those irrelevant to Ethereum Classic’s architecture, such as validator withdrawal operations and randomness derived from the beacon chain. Implementation requires coordination across client software and network participants for a scheduled hard fork at block heights to be determined on Mordor Testnet and Ethereum Classic Mainnet.
 
@@ -25,7 +25,7 @@ The proposal excludes upgrades tied to Ethereum’s transition to Proof-of-Stake
 #### Included in Olympia Upgrade
 
 - **EIP-1559 – Fee Market Change**
-Introduces a new transaction type with a dynamically adjusting base fee per gas and an optional priority tip to incentivize miners. On Ethereum Classic, instead of being burned, the `basefee` is redirected to the **Olympia Treasury**, an open on-chain development fund. This design aligns incentives between developers, miners, and users by converting transaction demand into sustainable network funding. As ETC's block reward continues to decline under ECIP-1017 monetary policy, this mechanism ensures the network retains a long-term **security and development budget** tied directly to economic activity on-chain.
+Introduces a new transaction type with a dynamically adjusting base fee per gas and an optional priority tip to incentivize miners. On Ethereum Classic, instead of being burned, the `BASEFEE` is redirected to the **Olympia Treasury**, an open on-chain development fund. This design aligns incentives between developers, miners, and users by converting transaction demand into sustainable network funding. As ETC's block reward continues to decline under ECIP-1017 monetary policy, this mechanism ensures the network retains a long-term **security and development budget** tied directly to economic activity on-chain.
 
 - **EIP-3198 – BASEFEE Opcode**
 Adds a new opcode that allows smart contracts to access the current block’s basefee, as defined by EIP-1559. This enables more accurate on-chain gas estimation and supports modern fee-aware applications.
@@ -46,13 +46,13 @@ The Olympia upgrade seeks to advance Ethereum Classic’s protocol capabilities 
 
 These changes provide four core benefits:
 
-1. **EVM Compatibility** – Developers can deploy EVM-standard dApps on Ethereum Classic without modification or workarounds, reducing friction and encouraging cross-chain application portability.
+1. **EVM Compatibility** – Developers can deploy EVM-standard dApps on Ethereum Classic without modification or workarounds, reducing friction and enabling seamless cross-chain application deployment.
 
 2. **Fee Market Modernization** – EIP-1559 introduces a predictable and more user-friendly gas pricing mechanism, aligning ETC with fee market improvements already adopted by major EVM chains.
 
 3. **Network Utility and Adoption** – Aligning with the broader EVM roadmap ensures Ethereum Classic remains relevant for developers, tooling providers, infrastructure teams, and users seeking a Proof-of-Work alternative to Ethereum.
 
-4. **Sustainable Development Incentives** – Redirecting the `basefee` to the Olympia Treasury enables Ethereum Classic to fund open-source development and long-term protocol maintenance without inflating supply. This ensures that, as block rewards decline under ECIP-1017, the network retains a credible on-chain security and innovation budget.
+4. **Sustainable Development Incentives** – Redirecting the `BASEFEE` to the Olympia Treasury enables Ethereum Classic to fund open-source development and long-term protocol maintenance without inflating supply. This ensures that, as block rewards decline under ECIP-1017, the network retains a credible on-chain security and innovation budget. This structure not only replaces centralized or discretionary funding models but also formalizes the relationship between protocol revenue and ecosystem development.
 
 ### Specification
 
@@ -66,13 +66,13 @@ Introduces a new transaction type with a dynamic `basefee`, redirected per block
 [EIP-3198](https://eips.ethereum.org/EIPS/eip-3198) – BASEFEE Opcode
 Adds the BASEFEE opcode (0x48) to the EVM, allowing smart contracts to query the current block’s base fee.
 
-On Ethereum Classic, the `basefee` is not burned but redirected to a dedicated smart contract known as the **Olympia Treasury**. This contract accumulates protocol-level fee revenue to fund ecosystem development and security, and is governed transparently via on-chain processes.
+On Ethereum Classic, the `BASEFEE` is not burned but redirected to a dedicated, non-upgradable smart contract known as the **Olympia Treasury** (see ECIP-1112). This contract accumulates protocol-level fee revenue to fund ecosystem development and security, and is governed transparently via on-chain processes.
 
 No additional changes beyond these EIPs are included in the Olympia upgrade. Clients should adhere strictly to the behavior defined in the linked specifications.
 
 ### Rationale
 
-__Interoperability__: Maintaining interoperability with Ethereum and other EVM-compatible chains is essential to ensuring developer portability, tooling support, and infrastructure reuse. By aligning with key protocol features like EIP-1559 and EIP-3198, Ethereum Classic reduces fragmentation and remains a viable deployment target for modern EVM applications and clients (e.g., ETC ↔ ETH parity).
+__Interoperability__: Maintaining interoperability with Ethereum and other EVM-compatible chains is essential to ensuring developer portability, tooling support, and infrastructure reuse. By aligning with key protocol features like EIP-1559 and EIP-3198, Ethereum Classic reduces fragmentation and remains a viable deployment target for modern EVM applications and clients (e.g., ETC ↔ ETH parity). 
 
 __Immutability__: The proposed upgrades introduce new transaction types and opcodes but do not alter the semantics of existing contracts or state. Historical contracts will behave identically, and no prior behavior is retroactively affected. These are strictly additive changes to EVM functionality and maintain the network’s commitment to immutability.
 
@@ -100,10 +100,12 @@ Testing should include full validation of:
 
 Community coordination is required to finalize testnet and mainnet fork block numbers, along with updated client releases that embed the Olympia fork rules.
 
+Implementation of the Olympia Treasury and its governance is defined in ECIP-1112 and ECIP-1113 respectively. This ECIP solely introduces the protocol-level redirection logic and opcode activation.
+
 ### Reference Implementation
 
 - Reference client: [Core-Geth](https://github.com/ethereumclassic/core-geth)
-- EIP-1559 and EIP-3198 are already implemented in Core-Geth (see `olympia-upgrade` branch).
+- EIP-1559 and EIP-3198 are implemented in Core-Geth under the `olympia-upgrade` branch, which also includes basefee redirection to the treasury contract as per ECIP-1112.
 - Testnet deployment and validation will occur on Mordor prior to mainnet activation.
 
 
@@ -117,6 +119,24 @@ All other Ethereum Foundation EIPs—from Tangerine Whistle (2016) to Prague-Ele
 - Incompatibility with ETC's Proof-of-Work architecture
 - Lack of developer or user demand
 - Risk of breaking immutability or changing contract behavior
+
+### Backwards Compatibility
+
+The Olympia upgrade introduces a new transaction type (Type-2) and an additional EVM opcode (`BASEFEE`). Legacy Type-0 transactions and all previously deployed contracts will remain valid and operate as before. However, nodes that do not upgrade will become incompatible and fork from the canonical Ethereum Classic chain upon activation. This upgrade does not retroactively alter historical blocks and maintains full execution compatibility with existing smart contracts. All new behavior is opt-in based on transaction type and client version.
+
+
+### Security Considerations
+
+No new consensus-critical vulnerabilities are introduced by this upgrade. The `BASEFEE` opcode and EIP-1559 transaction format have been widely adopted and audited across the EVM ecosystem. Core-Geth implementers are advised to validate integration against existing test vectors and consensus tests.
+
+Client implementers must ensure that redirecting the `BASEFEE` to the Olympia Treasury does not introduce rounding errors or state inconsistencies. Reference vectors from Ethereum Mainnet should be adjusted to reflect treasury accumulation rather than burn behavior.
+
+## Copyright
+
+Copyright and related rights waived via  
+[CC0](https://creativecommons.org/publicdomain/zero/1.0/).
+
+## Appendix
 
 ### ❌ Omitted EIPs – Compatibility Matrix for ECIP-1111 (Olympia Upgrade)
 
@@ -150,18 +170,3 @@ This table documents EIPs reviewed but excluded from the Olympia upgrade. EIPs a
 |                        | 7691    | Blob throughput increase                           | Omit    | Blob infra not present on ETC                  |
 |                        | 7702    | Set EOA account code                               | Omit    | Not required on ETC                            |
 |                        | 7840    | Blob schedule in EL config                         | Omit    | Blob txs not supported on ETC                  |
-
-
-### Backwards Compatibility
-
-The Olympia upgrade introduces a new transaction type (Type-2) and an additional EVM opcode (`BASEFEE`). Legacy Type-0 transactions and all previously deployed contracts will remain valid and operate as before. However, nodes that do not upgrade will become incompatible and fork from the canonical Ethereum Classic chain upon activation.
-
-
-### Security Considerations
-
-No new consensus-critical vulnerabilities are introduced by this upgrade. The `BASEFEE` opcode and EIP-1559 transaction format have been widely adopted and audited across the EVM ecosystem. Core-Geth implementers are advised to validate integration against existing test vectors and consensus tests.
-
-## Copyright
-
-Copyright and related rights waived via  
-[CC0](https://creativecommons.org/publicdomain/zero/1.0/).
