--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -123,6 +123,8 @@ All contracts will be published open-source and audited before mainnet deploymen
 
 Governance parameters may be initialized with conservative defaults and adjusted via governance vote once live.
 
+While the Olympia DAO operates entirely on-chain for governance, voting, and proposal execution, an external legal interface is provided through the Ethereum Classic DAO LLC (see ECIP-1114). This Wyoming-registered entity facilitates real-world compliance tasks such as fiat conversion, tax reporting, and contractor onboarding. It does not hold treasury funds or possess decision-making authority. Instead, it acts solely as a compliance and execution layer for off-chain disbursements authorized by DAO governance.
+
 ### Backwards Compatibility
 
 The Olympia DAO governance system is a new protocol layer and does not alter the Ethereum Classic virtual machine, consensus rules, or transaction formats. As such, it is fully backward-compatible with all existing smart contracts, wallets, and tooling.
