--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -97,6 +97,19 @@ The Ethereum Classic Funding Proposal (ECFP) process is defined as a structured,
 - Emergency withdrawals, recurring budgets, or multi-phase proposals MUST still be submitted via the ECFP process.
 - Olympia DAO MAY introduce additional proposal categories (e.g., Operational ECFPs, Treasury Management ECFPs) with specific criteria and review workflows.
 
+#### Legal Interface: Ethereum Classic DAO LLC
+
+While the Olympia DAO governs proposal approval and treasury disbursement on-chain, all off-chain administrative and compliance functions — including fiat conversion, tax reporting, Bank Secrecy Act (BSA) and Know Your Customer (KYC) compliance, and contractor engagement — SHALL be facilitated by **Ethereum Classic DAO LLC**, a Wyoming-registered DAO entity.
+
+This legal wrapper:
+
+- Acts as a real-world interface for recipients who require legal clarity or fiat settlement  
+- Ensures that treasury disbursements meet applicable regulatory requirements  
+- Maintains standardized reporting and transparency to uphold the DAO’s integrity  
+- Holds no governance authority; all disbursement decisions MUST originate from on-chain proposals and votes
+
+The DAO LLC functions solely as a **compliance conduit**, enabling lawful execution of approved disbursements **without custody or discretion** over treasury funds or DAO governance.
+
 ### Rationale
 
 The Ethereum Classic Funding Proposal (ECFP) process formalizes a community-governed method for allocating protocol-level funds from the Olympia Treasury. This structure ensures funding decisions are transparent, inclusive, and aligned with the Ethereum Classic network’s long-term values.
