Appendix EVM Compatibility Matrix

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -136,37 +136,32 @@ Client implementers must ensure that redirecting the `BASEFEE` to the Olympia Tr
 Copyright and related rights waived via  
 [CC0](https://creativecommons.org/publicdomain/zero/1.0/).
 
-## Appendix
+## Appendix EVM Compatibility Matrix for Olympia Upgrade
 
-### ❌ Omitted EIPs – Compatibility Matrix for ECIP-1111 (Olympia Upgrade)
+### ✅ Recommended for Inclusion (Olympia or Next Upgrade)
 
-This table documents EIPs reviewed but excluded from the Olympia upgrade. EIPs are organized by Ethereum Foundation hard fork and include a brief rationale for omission.
+| EIP   | Title                                  | Reason to Include                                                                                     |
+|-------|----------------------------------------|--------------------------------------------------------------------------------------------------------|
+| 1283  | SSTORE Gas Metering Changes            | Improves storage efficiency; expected by many contracts and compilers. Low-risk, high-impact.         |
+| 5656  | MCOPY Memory Instruction               | EVM performance upgrade; useful for zkApps and L2-compatible tooling. Adds parity without PoS entanglement. |
+| 6780  | SELFDESTRUCT Semantics Change          | Aligns behavior with post-Shanghai semantics. Requires discussion but brings full compatibility.       |
+| 1153  | Transient Storage Opcodes              | Enables modern contract patterns (used in L2s and advanced dApps). Increasingly required by tooling.   |
+| 2935  | Save Historical Block Hashes in State  | Adds native access to past block hashes. Useful for on-chain randomness and oracle logic.              |
+| 7623  | Increase Calldata Cost                 | Disincentivizes calldata abuse. Aligns ETC with post-4844 economic design. Can be tuned for ETC.       |
 
-| Fork                   | EIP     | Title                                              | Status  | Rationale                                      |
-|------------------------|---------|----------------------------------------------------|---------|------------------------------------------------|
-| Spurious Dragon (2016) | 161     | State trie clearing                                | Omit    | Not required; state pruning not urgent on ETC |
-|                        | 170     | Contract code size limit                           | Omit    | ETC has not encountered this limit             |
-| Byzantium (2017)       | 649     | Difficulty bomb delay / reward reduction           | Omit    | ETC has no difficulty bomb                     |
-| Constantinople (2019)  | 1234    | Difficulty bomb delay / reward reduction           | Omit    | Same as above                                  |
-|                        | 1283    | SSTORE gas metering change                         | Omit    | Not consensus-critical; minor utility          |
-| London (2021)          | 3228    | Difficulty bomb delay                              | Omit    | ETC has no difficulty bomb                     |
-| Paris (2022)           | 3675    | Switch to Proof of Stake                           | Omit    | Incompatible with ETC's Proof-of-Work          |
-|                        | 4399    | Replace DIFFICULTY with PREVRANDAO                 | Omit    | Beacon RANDAO not available in PoW             |
-| Shanghai (2023)        | 4895    | Beacon chain withdrawals                           | Omit    | ETC has no validators or withdrawal logic      |
-| Cancun (2024)          | 1153    | Transient storage opcodes                          | Omit    | Optional; requires wider EVM analysis          |
-|                        | 4788    | Beacon block root in EVM                           | Omit    | Not applicable on PoW chain                    |
-|                        | 4844    | Shard blob transactions (proto-danksharding)       | Omit    | Requires significant infra and PoS context     |
-|                        | 5656    | MCOPY memory instruction                           | Omit    | Performance optimization, not critical         |
-|                        | 6780    | SELFDESTRUCT limitation                            | Omit    | Requires consensus discussion                  |
-|                        | 7516    | BLOBBASEFEE opcode                                 | Omit    | Part of blob tx infra; not applicable yet      |
-| Prague (2025)          | 2537    | BLS12-381 precompile                               | Omit    | Used for PoS cryptography                      |
-|                        | 2935    | Save historical block hashes in state              | Omit    | Not essential; increases state size            |
-|                        | 6110    | Supply validator deposits                          | Omit    | ETC does not use validators                    |
-|                        | 7002    | Execution-layer exits                              | Omit    | PoS-specific                                   |
-|                        | 7251    | MAX_EFFECTIVE_BALANCE increase                     | Omit    | PoS-specific                                   |
-|                        | 7549    | Move committee index                               | Omit    | PoS-specific                                   |
-|                        | 7623    | Increase calldata cost                             | Omit    | Requires ecosystem-wide coordination           |
-|                        | 7685    | EL-execution-layer requests                        | Omit    | PoS-specific                                   |
-|                        | 7691    | Blob throughput increase                           | Omit    | Blob infra not present on ETC                  |
-|                        | 7702    | Set EOA account code                               | Omit    | Not required on ETC                            |
-|                        | 7840    | Blob schedule in EL config                         | Omit    | Blob txs not supported on ETC                  |
+### ⚠️ Optional / Low Priority
+
+| EIP   | Title                        | Notes                                                                                     |
+|-------|------------------------------|-------------------------------------------------------------------------------------------|
+| 170   | Contract Code Size Limit     | Useful for DoS mitigation, but ETC hasn’t encountered this issue. Optional safeguard.     |
+| 3228  | Difficulty Bomb Delay        | Only relevant to Ethereum’s PoS transition. No action needed.                             |
+| 7691  | Blob Throughput Increase     | Applies only to networks implementing EIP-4844. ETC does not currently support blobs.     |
+| 7702  | Set EOA Account Code         | Supports future account abstraction. Not urgent unless ETC pursues this roadmap.          |
+
+### ❌ Should Remain Omitted (PoS-Specific or Incompatible)
+
+| EIP(s)                                            | Reason to Remain Excluded                                                                                                              |
+|--------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------|
+| 3675, 4895, 4788, 4399, 6110, 7251, 7549, 7002, 7685, 7840 | All relate to Ethereum's Proof-of-Stake, beacon chain, validator operations, or staking exit logic — incompatible with ETC's PoW consensus. |
+| 4844, 7516                                       | Depend on blob transaction infrastructure and consensus changes. High complexity with minimal benefit unless ETC plans major infra upgrades. |
+| 2537                                            | Introduces BLS12-381 precompile. Adds cryptographic surface area for PoS use cases; not currently useful for ETC.                       |
