--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -16,7 +16,7 @@ This proposal activates select Ethereum protocol upgrades on Ethereum Classic vi
 
 ### Abstract
 
-This ECIP proposes the activation of selected Ethereum protocol upgrades on the Ethereum Classic network under the hard fork name Olympia. The upgrade includes EIP-1559, which introduces a dynamic base fee mechanism to improve transaction fee predictability and market efficiency, and EIP-3198, which adds the BASEFEE opcode for EVM compatibility. These changes are intended to enhance interoperability with Ethereum and other EVM-based networks while preserving Ethereum Classic’s Proof-of-Work consensus and immutability principles. The Olympia Treasury (see ECIP-1112) receives all `BASEFEE` revenue, which is later governed by Olympia DAO (ECIP-1113) using the Ethereum Classic Funding Proposal process (ECIP-1114).
+This ECIP proposes the activation of selected Ethereum protocol upgrades on the Ethereum Classic network under the hard fork name Olympia. The upgrade includes EIP-1559, which introduces a dynamic base fee mechanism to improve transaction fee predictability and market efficiency, and EIP-3198, which adds the BASEFEE opcode for EVM compatibility. These changes are intended to enhance interoperability with Ethereum and other EVM-based networks while preserving Ethereum Classic’s Proof-of-Work consensus and immutability principles. The Olympia Treasury (see ECIP-1112) receives all `BASEFEE` revenue, which is governed by Olympia DAO (ECIP-1113) using the Ethereum Classic Funding Proposal process (ECIP-1114), and executed off-chain by Ethereum Classic DAO LLC as a legal interface.
 
 The proposal excludes upgrades tied to Ethereum’s transition to Proof-of-Stake or those irrelevant to Ethereum Classic’s architecture, such as validator withdrawal operations and randomness derived from the beacon chain. Implementation requires coordination across client software and network participants for a scheduled hard fork at block heights to be determined on Mordor Testnet and Ethereum Classic Mainnet.
 
@@ -44,11 +44,11 @@ For full technical specifications, see the Specification section below.
 
 The Olympia upgrade seeks to advance Ethereum Classic’s protocol capabilities by adopting proven Ethereum Virtual Machine (EVM) enhancements introduced by the Ethereum Foundation. By implementing EIP-1559 and EIP-3198, Ethereum Classic will gain compatibility with modern transaction formats and smart contract expectations used across the broader EVM ecosystem.
 
-These changes provide four core benefits:
+These changes provide four core benefits to the Ethereum Classic ecosystem:
 
 1. **EVM Compatibility** – Developers can deploy EVM-standard dApps on Ethereum Classic without modification or workarounds, reducing friction and enabling seamless cross-chain application deployment.
 
-2. **Fee Market Modernization** – EIP-1559 introduces a predictable and more user-friendly gas pricing mechanism, aligning ETC with fee market improvements already adopted by major EVM chains.
+2. **Fee Market Modernization** – EIP-1559 introduces a more predictable and user-friendly gas pricing mechanism, aligning ETC with fee market improvements already adopted by major EVM chains.
 
 3. **Network Utility and Adoption** – Aligning with the broader EVM roadmap ensures Ethereum Classic remains relevant for developers, tooling providers, infrastructure teams, and users seeking a Proof-of-Work alternative to Ethereum.
 
@@ -136,9 +136,20 @@ Client implementers must ensure that redirecting the `BASEFEE` to the Olympia Tr
 Copyright and related rights waived via  
 [CC0](https://creativecommons.org/publicdomain/zero/1.0/).
 
-## Appendix EVM Compatibility Matrix for Olympia Upgrade
+## Appendix: EVM Compatibility Roadmap and Upgrade Candidates
 
-### ✅ Recommended for Inclusion (Olympia or Next Upgrade)
+### Future Considerations: Toward Full EVM Compatibility
+
+While the Olympia Upgrade is intentionally limited in scope to EIP-1559 and EIP-3198, a review of additional Ethereum protocol improvements was conducted to identify candidates for future adoption. The table below categorizes EIPs from Ethereum’s post-London upgrade path based on their compatibility with Ethereum Classic’s Proof-of-Work model, utility to developers, and alignment with ETC’s values of immutability, security, and simplicity.
+
+This matrix serves as a foundation for community discussion and potential inclusion in future hard forks.
+
+> 📘 Note: The EIPs listed below are not part of the current Olympia Upgrade activation but may be included in a subsequent ECIP following community consensus and testnet validation.
+
+
+### ✅ Candidates for Future Inclusion
+
+> These EIPs are not included in ECIP-1111 but are technically and philosophically compatible with Ethereum Classic’s Proof-of-Work model. They are recommended for inclusion in a future hard fork following further community review.
 
 | EIP   | Title                                  | Reason to Include                                                                                     |
 |-------|----------------------------------------|--------------------------------------------------------------------------------------------------------|
