--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -16,7 +16,7 @@ This proposal activates select Ethereum protocol upgrades on Ethereum Classic vi
 
 ### Abstract
 
-This ECIP proposes the activation of selected Ethereum protocol upgrades on the Ethereum Classic network under the hard fork name Olympia. The upgrade includes EIP-1559, which introduces a dynamic base fee mechanism to improve transaction fee predictability and market efficiency, and EIP-3198, which adds the BASEFEE opcode for EVM compatibility. These changes are intended to enhance interoperability with Ethereum and other EVM-based networks while preserving Ethereum Classic’s Proof-of-Work consensus and immutability principles. The Olympia Treasury (see ECIP-1112) receives all `BASEFEE` revenue, which is governed by Olympia DAO (ECIP-1113) using the Ethereum Classic Funding Proposal process (ECIP-1114), and executed off-chain by Ethereum Classic DAO LLC as a legal interface.
+This ECIP proposes the activation of selected Ethereum protocol upgrades on the Ethereum Classic network under the hard fork name Olympia. The upgrade includes EIP-1559, which introduces a dynamic base fee mechanism to improve transaction fee predictability and market efficiency, and EIP-3198, which adds the BASEFEE opcode for EVM compatibility. These changes are intended to enhance interoperability with Ethereum and other EVM-based networks while preserving Ethereum Classic’s Proof-of-Work consensus and immutability principles. The Olympia Treasury (see ECIP-1112) receives all `BASEFEE` revenue, which is governed by Olympia DAO (ECIP-1113) using the Ethereum Classic Funding Proposal process (ECIP-1114), and executed off-chain by Ethereum Classic DAO LLC as a legal interface for compliance, payments, and treasury administration.
 
 The proposal excludes upgrades tied to Ethereum’s transition to Proof-of-Stake or those irrelevant to Ethereum Classic’s architecture, such as validator withdrawal operations and randomness derived from the beacon chain. Implementation requires coordination across client software and network participants for a scheduled hard fork at block heights to be determined on Mordor Testnet and Ethereum Classic Mainnet.
 
@@ -25,7 +25,7 @@ The proposal excludes upgrades tied to Ethereum’s transition to Proof-of-Stake
 #### Included in Olympia Upgrade
 
 - **EIP-1559 – Fee Market Change**
-Introduces a new transaction type with a dynamically adjusting base fee per gas and an optional priority tip to incentivize miners. On Ethereum Classic, instead of being burned, the `BASEFEE` is redirected to the **Olympia Treasury**, an open on-chain development fund. This design aligns incentives between developers, miners, and users by converting transaction demand into sustainable network funding. As ETC's block reward continues to decline under ECIP-1017 monetary policy, this mechanism ensures the network retains a long-term **security and development budget** tied directly to economic activity on-chain.
+Introduces a new transaction type with a dynamically adjusting base fee per gas and an optional priority tip to incentivize miners. On Ethereum Classic, instead of being burned, the `BASEFEE` is redirected to the **Olympia Treasury**, an open on-chain development fund. This design aligns incentives between developers, miners, and users by converting transaction demand into sustainable network funding. As ETC's block reward continues to decline under [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) monetary policy, this mechanism ensures the network retains a long-term **security and development budget** tied directly to economic activity on-chain.
 
 - **EIP-3198 – BASEFEE Opcode**
 Adds a new opcode that allows smart contracts to access the current block’s basefee, as defined by EIP-1559. This enables more accurate on-chain gas estimation and supports modern fee-aware applications.
@@ -77,6 +77,10 @@ __Interoperability__: Maintaining interoperability with Ethereum and other EVM-c
 __Immutability__: The proposed upgrades introduce new transaction types and opcodes but do not alter the semantics of existing contracts or state. Historical contracts will behave identically, and no prior behavior is retroactively affected. These are strictly additive changes to EVM functionality and maintain the network’s commitment to immutability.
 
 __Standards Compliance__: Supporting canonical EIPs is critical for application-layer compatibility. Without EIP-1559 and EIP-3198, Ethereum Classic would lack support for transaction types and opcodes widely expected by wallets, bridges, rollups, and contract compilers. Adopting these standards helps ensure that modern Web3 applications can be deployed on ETC without modification.
+
+### Real-World Precedents for BASEFEE Redirection
+
+While Ethereum Mainnet burns the `BASEFEE` under EIP-1559, a small number of EVM-compatible networks have chosen to redirect this fee to protocol treasuries instead. For example, the **Ronin** sidechain (Axie Infinity) routes base fee revenue to its [Ronin Treasury contract](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217), while **Celo** (a Proof-of-Stake L1) directs base fees to a [Gas Fee Handler contract](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438) governed by its DAO. These implementations demonstrate that treating `BASEFEE` as protocol income — rather than as a deflationary burn — is a viable and increasingly adopted alternative. By doing so, Ethereum Classic aligns with a growing trend toward using network activity to fund decentralized development in a sustainable, transparent, and incentive-aligned manner.
 
 ### Implementation
 
